tests/NormalTests/paczka2/big_fuzzy/49585978.err
Error in line 5: Em8f S590 52,0
Error in line 3: uwMS S590 6,0
Error in line 13: uwMS A260 78,8
Error in line 14: uwMS S590 88,2
Error in line 16: 97lg A260 49,9
Error in line 2: SKHJ A260 59,4
Error in line 18: SKHJ A259 47,0
Error in line 22: 97lg S518 17,2
Error in line 37: Em8f A260 6,1
Error in line 33: 97lg A259 27,4
Error in line 45: uwMS S590 95,0
Error in line 46: uwMS A260 59,6
Error in line 31: SKHJ S518 88,9
Error in line 59: OSz0 S518 94,6
Error in line 60: OSz0 A259 23,9
Error in line 69: C2xWox A259 76,5
Error in line 64: OSz0 S590 6,2
Error in line 74: OSz0 A260 26,8
Error in line 78: OSz0 S518 45,1
Error in line 88: S518 S590 77,4
Error in line 90: S518 A260 11,8
Error in line 91: C2xWox A260 64,1
Error in line 96: C2xWox A259 58,3
Error in line 99: uwMS A260 52,2
Error in line 113: S518 S518 18,2
Error in line 117: Em8f S590 27,8
Error in line 120: Em8f S518 74,4
Error in line 85: SKHJ S590 201,2
Error in line 131: S518 S518 0,3
Error in line 138: C2xWox S590 1,4
Error in line 144: S518 S590 51,2
Error in line 150: 97lg S590 147,3
Error in line 135: OSz0 A259 64,1
Error in line 170: Em8f A259 62,4
Error in line 165: C2xWox S518 51,9
Error in line 200: Em8f A259 57,4
Error in line 163: OSz0 A260 423,9
Error in line 231: 97lg A260 85,7
Error in line 243: OSz0 S518 59,8
Error in line 240: uwMS A260 77,9
